# Wirk

./: Cargo.toml  README.md
gl/: Cargo.toml  build.rs
gl/assets/shaders/: triangle.frag  triangle.vert
gl/src/: lib.rs
gl_derive/: Cargo.toml
gl_derive/src/: lib.rs
src/: lib.rs  tests.rs
src/collision/: mod.rs
src/ecs/: mod.rs
src/fps/: mod.rs
src/input/: mod.rs
src/rendering/: mod.rs
src/rendering/camera_2d/: mod.rs
src/rendering/errors/: mod.rs
src/rendering/shader/: buffer.rs  color_buffer.rs  mod.rs  program.rs  shader_utils.rs  viewport.rs
src/rendering/sprite/: mod.rs  rigid_body_2d.rs  sprite_batch.rs
src/rendering/texture/: mod.rs
src/rendering/triangle/: mod.rs
src/rendering/ui/: mod.rs  text.rs  ui_batch.rs  ui_utils.rs
src/rendering/vertex/: mod.rs  vertex_data.rs
src/resources/: mod.rs  resource_utils.rs  texture_cache.rs
src/resources/errors/: mod.rs
src/shader/: mod.rs  program.rs  shader_utils.rs
src/shader/errors/: mod.rs
src/sound/: mod.rs
