[package]
name = "RustEngineLibrary"
version = "0.1.0"
authors = ["matkenis <rutenisnaug@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
gl_generator = "0.9.0"
walkdir = "2.1"

[dependencies]
sdl2 = "0.31.0"
failure = "0.1"
gl = { path = "gl/" }
gl_derive = { path = "gl_derive" }
vec-2-10-10-10 = "0.1.2"
nalgebra = "0.16"
image = "0.23.14"

[features]
gl_debug = ["gl/debug"]