[package]
name = "RustEngineLibrary"
version = "0.1.0"
authors = ["matkenis <rutenisnaug@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
#gl_generator = "0.9.0"
walkdir = "2.1"

[dependencies]
failure = "0.1"
gl = { path = "gl/" }
gl_derive = { path = "gl_derive" }
vec-2-10-10-10 = "0.1.2"
nalgebra = "0.16"
nalgebra-glm = "0.1"
image = "0.23.14"
time = "0.2.25"
wrapped2d = "0.4.1"
rand = "0.8.0"
legion = "0.4.0"
sdl2 = { version = "0.31.0", default-features = false, features = ["ttf"] }
rodio = "0.13.1"

[features]
gl_debug = ["gl/debug"]